# vexact

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.codebase/pipelines/: nightly.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: run_gpu_tests.sh  run_verl_smoke.sh
.github/workflows/: check_pr_lint.yml  check_pr_title.yml  gpu_tests.yml  nightly.yml
benchmarks/: README.md  batch_invariance_results.md  dataset.py  throughput.py
ci/: nightly.sh
docs/tasks/: vexact_vs_vllm_batch_probe.md
examples/: README.md
examples/getting_started/: run_qwen3_1b7.sh
examples/math_reward_model/: math_grader.py  math_grader_moe.py  math_utils.py
examples/moe/: run_moonlight_gsm8k.sh  run_moonlight_reinforce.sh  run_qwen3_30B_A3B_16H100.sh  run_qwen3_30B_A3B_8B200.sh  run_qwen3_30B_A3B_dapo.sh  run_qwen3_30B_A3B_reinforce.sh
examples/verify/: run_dense_vexact.sh  run_dense_vllm.sh
ray_runtime_envs/: ray_runtime_env.yaml  ray_runtime_env_baseline.yaml  ray_runtime_env_fa4.yaml
scripts/: check_license.py  presubmit_gpu8.sh  run_batch_invariant_tests.sh
scripts/ci/: check_pr_title.py  nightly.sh
tests/: conftest.py  test_batch_throughput.py  test_control_channel.py  test_deepseek_fused_lce_backward.py  test_driver_client.py  test_driver_worker_proxy.py  test_fa4_deepseek_shape.py  test_generate_simple.py  test_generation_regression.py  test_inferencer.py  test_inferencer_sampling.py  test_kv_cache_manager.py  test_load_state_dict.py  test_model_loader.py  test_pp_messager.py  test_qwen3_moe_conversion.py  test_request_channel.py  test_scheduler.py  test_worker_proc_manager.py  test_worker_proxy.py
tests/batch_invariant_ops/: test_batch_invariance.py  test_flash_attention_4_batch_invariance.py  test_flash_attention_batch_invariance.py  test_flex_attention_batch_invariance.py  test_fused_moe.py  test_matmul.py  test_naive_moe.py  test_speed_flex_vs_flash.py  test_torch_conv3d.py  test_triton_attention_varlen.py  test_verl_fused_linear_for_ppo.py
tests/ref_data/: all_token_ids_list.json  first_rank_intermediate.pt  inferencer_baseline_token_ids.pt  metadata.json  mid_rank_intermediate.pt
tests/scripts/: hf_inference.py  verify_logits_vs_native_hf.py
tests/utils/: init_random_weights.py
tests/verl_integrations/: test_bucketed_weight_transfer.py
vexact/: __init__.py  config.py  engine.py
vexact/batch_invariant_ops/: README.md  __init__.py  batch_invariant_ops.py  flash_attention.py  flex_attention.py  fused_moe.py  kv_cache_context.py  oai_fused_attn.py  standalone_logprobs.py  triton_invariant_attention.py
vexact/batch_invariant_ops/group_gemm/kernel/: group_gemm.py  moe.py
vexact/batch_invariant_ops/group_gemm/utils/: config.py  pretuned.py
vexact/core/: request.py  runtime_data.py  scheduler.py
vexact/distributed/: pp_messager.py
vexact/inferencer/: cudagraph_utils.py  inferencer.py  model_loader.py  sampler.py
vexact/integrations/verl/: async_server.py  bucketed_weight_transfer.py  fsdp_enable_invariant.py  register.py  rollout.py
vexact/ipc/: control_channel.py  request_channel.py  vexact_ipc_design.md
vexact/models/: register.py
vexact/models/deepseek_v3/: modeling_deepseek_v3.py
vexact/models/qwen3_moe/: modeling_qwen3_moe.py
vexact/utils/: device.py  logging.py  profiler.py  subprocess_utils.py  sys.py  tokenizer.py  torch_memory_saver_adapter.py
vexact/worker/: driver_client.py  driver_worker.py  worker.py  worker_proc_manager.py  worker_proxy.py
