[project]
name = "vexact"
version = "0.1.0"
description = "TODO"
requires-python = ">=3.12, <3.13"
dependencies = [
    "transformers",
    "torch_memory_saver==0.0.9; platform_machine != 'aarch64'",
    "pyzmq>=27.1.0",
    "msgspec",
]

[project.optional-dependencies]
gpu = [
    "torch==2.10.0+cu129",
    "torchvision",
    "torchaudio",
    "flash-attn",
    "flash-attn-3",
    "flash-attn-4",
    "quack-kernels==0.3.4",
    "nvidia-ml-py",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit"
]
vllm = [
    "vllm==0.18.0",
]
verl = [
    "verl",
    "uvicorn",
    "fastapi",
    "cachetools",
]
veomni = [
    "veomni",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vexact"]

[tool.coverage.run]
source = ["vexact"]

[tool.coverage.report]
ignore_errors = true

# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
target-version = "py312"
indent-width = 4
# Note: While the formatter will attempt to format lines such that they remain within the line-length,
# it isn't a hard upper bound, and formatted lines may exceed the line-length.
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    "G",
]

ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # `.log()` statement uses f-string
    "G004",
    # X | None for type annotations
    "UP045",
    # Union[X, Y] -> X | Y
    "UP007",
    # deprecated import
    "UP035",
    # `zip()` without an explicit `strict=` parameter
    "B905",
    # Class inherits from both `str` and `enum.Enum` -> suggests StrEnum, which has different __str__ semantics
    "UP042",
]

extend-unsafe-fixes = [
  # F401 auto fixes might remove imports that perform side effects like register logic.
  # So set as unsafe fix to promote manual fixes.
  "F401",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

known-first-party = [
  "verl",
  "vexact",
  "veomni",
]

known-third-party = [
  "torch",
  "transformers",
  "wandb",
]

[tool.uv.sources]
verl = { git = "https://github.com/verl-project/verl.git", rev = "61f29997fb026a5a269dafccfe2f3bb800e32ef4" }
# To work on verl locally, point this at `{ path = "./verl", editable = true }`.
# To work on VeOmni locally, point this at `{ path = "./VeOmni", editable = true }`.
veomni = { git = "https://github.com/ByteDance-Seed/VeOmni.git", rev = "58759e78015ad429507079aa443215e3c515364f" }
torch = [
    { index = "pytorch", extra = "gpu" },
]
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
flash-attn = { url = "https://github.com/Luosuu/flash-attention3-wheels/releases/download/v0.0.2/flash_attn-2.8.4+cu129torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
flash-attn-3 = { url = "https://github.com/windreamer/flash-attention3-wheels/releases/download/2026.03.16-4d76052/flash_attn_3-3.0.0+20260316.cu129torch2100cxx11abitrue.71bf77-cp39-abi3-linux_x86_64.whl" }
# Pin to FA4 4.0.0b5: b7+ contains commits that break MLA bitwise alignment
# (rollout_probs_diff_max regresses from 0 to ~0.18 on Moonlight). Needs
# upstream investigation before we can bump.
flash-attn-4 = { url = "https://files.pythonhosted.org/packages/7a/37/5b0128141da6faf03ec0cee1fc30061a3f50a3a4fcf6bc2a8bafa32e4cd2/flash_attn_4-4.0.0b5.tar.gz" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv]
required-version = "==0.9.8"
# extra-build-variables = { flash-attn = { FLASH_ATTENTION_FORCE_BUILD = "TRUE", MAX_JOBS = "16" } }
no-build-isolation-package = ["flash-attn"]
environments = ["sys_platform == 'linux'"]
override-dependencies = [
    "opencv-python-headless<4.13.0",
]
